# cuda-concurrency-detection

./: CMakeLists.txt  readme.md
cmake/: compiler-flags.cmake  cuda-gencodes.cmake
cmake/modules/: FindNVTX.cmake
docs/: notes.md
include/: SAXPY.cuh
include/util/: CUDADevice.cuh  ComputeCapability.cuh  ErrorChecking.cuh  NVTX.h
src/: CMakeLists.txt  main.cu
src/util/: ComputeCapability.cu
